[gd_scene load_steps=10 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/npc/general_walk2.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/npc/general_walk4.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/npc/general_walk1.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/npc/general_walk3.png" type="Texture" id=4]
[ext_resource path="res://CutsceneGeneral.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 11 )

[sub_resource type="CircleShape2D" id=3]
radius = 87.0517

[sub_resource type="CircleShape2D" id=4]
radius = 179.101

[node name="general" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 1 )
animation = "walk"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 12.3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -12, 4 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
